<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/welcome"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/textViewPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/socially"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/_36ssp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_frame_1"
            tools:layout_editor_absoluteX="63dp"
            tools:layout_editor_absoluteY="146dp" />
    </LinearLayout>
</layout>