<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.profilefragments.ProfileFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_profile_background_2"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/_95sdp"
                    android:layout_height="@dimen/_98sdp"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:background="@drawable/ic_profile_stroke"
                    android:contentDescription="@string/app_name"
                    android:paddingTop="@dimen/_5sdp"
                    android:src="@drawable/profile"
                    app:layout_constraintBottom_toBottomOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="@+id/view"
                    app:layout_constraintStart_toStartOf="@+id/view" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:includeFontPadding="false"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_25ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"
                    android:text="@string/username"
                    android:textColor="#4E4E4E"
                    android:textSize="@dimen/_16ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_75ssp"
                    android:layout_marginEnd="@dimen/_35sdp"
                    android:baselineAligned="false"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:includeFontPadding="false"
                            android:text="@string/posts"
                            android:textColor="#656565"
                            android:textSize="@dimen/_16ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:includeFontPadding="false"
                            android:text="@string/example_post"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_25ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:includeFontPadding="false"
                            android:text="@string/followers"
                            android:textColor="#656565"
                            android:textSize="@dimen/_16ssp" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:includeFontPadding="false"
                            android:text="@string/followers_count"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_25ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:includeFontPadding="false"
                            android:text="@string/follows"
                            android:textColor="#656565"
                            android:textSize="@dimen/_16ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:includeFontPadding="false"
                            android:text="@string/follows_count"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_25ssp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tabIconTint="@drawable/tablayout_icon_color">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_photos" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_saved"/>

            </com.google.android.material.tabs.TabLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPosts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/item_my_post" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>