<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.hbacakk.sosyalmedya.data.models.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.messageActivity.messageDetailsFragment.MessageDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutMessage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@drawable/messaging_user_background"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="36dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewBack">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:background="@drawable/ic_profile_stroke"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/profile"
                    app:layout_constraintBottom_toBottomOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="@+id/view"
                    app:layout_constraintStart_toStartOf="@+id/view" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:includeFontPadding="false"
                        android:text="@{user.userName}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20ssp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:includeFontPadding="false"
                        android:text="@string/online"
                        android:textColor="#656565"
                        android:textSize="@dimen/_13ssp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMessage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutMessage"
            tools:listitem="@layout/item_message_received" />

        <androidx.cardview.widget.CardView
            android:id="@+id/linearLayout5"
            android:layout_width="0dp"
            android:layout_height="@dimen/_80sdp"
            android:layout_margin="@dimen/_20sdp"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:cardCornerRadius="@dimen/_40sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/inputMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@null"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/write_a_message"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:textSize="@dimen/_13ssp" />

                <ImageView
                    android:id="@+id/imageViewSend"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@drawable/background_message_send"
                    android:contentDescription="@string/app_name"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    app:srcCompat="@drawable/ic_send" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>